# pkg/csm/model/sse.go
@@ -1,0 +1,7 @@
+package model
+
+type SSE struct {
+	IP        string `json:"ip"`
+	Heartbeat bool   `json:"heartbeat"`
+	T         string `json:"t"`
+}
